re#1639 2. Disabled image should be with icon icon-ban-circle: fix z-index z hoverem

--- a/skin/frontend/default/udropship/css/local/noless.css
+++ b/skin/frontend/default/udropship/css/local/noless.css
@@ -714,5 +714,5 @@
     -moz-transform:scale(1.5);
     -o-transform:scale(1.5);
     transform:scale(1.5);
-    z-index: 100;
+    z-index: 0;
 }
